--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciando con vue</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script defer src="app.js"></script>
 </head>
 <body>
-    <div id="app">
-        {{ message }},{{ city }} {{ country }}
+    <h2>Empezando con vue</h2>
+    <div id="app" >
+        <label for="" style="color: blue;"> {{ message }},{{ city }} {{ country }}</label>
+       
         {{imprimirEnConsola()}}
       </div>
       
