--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     <script defer src="app.js"></script>
 </head>
 <body>
-    <h2>Empezando con vue</h2>
-    <div id="app" class="">
+   
+
+    <div id="app" class="card mb-4 box-shadow">
+        <div class="card-header">
+            <h2>Empezando con vue</h2>
+          </div>
+          <div class="card-body"></div>
         <label for="" style="color: blue;"> {{ message }},{{ city }} {{ country }}</label>
-       <h3 class="display-3">{{name}}</h3>
-        
+       <h5>{{name}}</h3>
+       <p>{{numero1+numero2}}</p>
+    </div>
     </div>
       
 </body>
