--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciando con vue</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script defer src="app.js"></script>
 </head>
+
 <body>
-   
+
 
     <div id="app" class="card mb-4 box-shadow">
         <div class="card-header">
-            <h2>Empezando con vue</h2>
-          </div>
-          <div class="card-body"></div>
-        <label for="" style="color: blue;"> {{ message }},{{ city }} {{ country }}</label>
-       <h5>{{name}}</h3>
-       <p>{{numero1+numero2}}</p>
+            <h2>Desafio 2</h2>
+        </div>
+        <div class="card-body"></div>
+        <label for="" style="color: blue;">{{mensaje}} </label>
+        <label for=""  style="color: red;">Cambiar mensaje</label>
+        <input type="text"  v-model="mensaje">
+        <button v-on:click="mensaje2" class="btn btn-blue"> Ver mensaje </button>
+       
     </div>
     </div>
-      
+
 </body>
+
 </html>
