--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label for="" style="color: blue;">{{mensaje}} </label>
         <label for=""  style="color: red;">Cambiar mensaje</label>
         <input type="text"  v-model="mensaje">
-        <button v-on:click="mensaje2" class="btn btn-blue"> Ver mensaje </button>
+        <button v-on:click="mensaje2" class="btn btn-outline-light me-2"> Ver mensaje </button>
        
     </div>
     </div>
