--- a/index.html
+++ b/index.html
@@ -15,19 +15,28 @@
 <body>
 
 
-    <div id="app" class="card mb-4 box-shadow">
-        <div class="card-header">
-            <h2>Desafio 2</h2>
+    <div id="app">
+        <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Sesión 2 de la primera semana</h1>
+            <p class="lead">Desafio 2</p>
         </div>
-        <div class="card-body"></div>
-        <label for="" style="color: blue;">{{mensaje}} </label>
-        <label for=""  style="color: red;">Cambiar mensaje</label>
-        <input type="text"  v-model="mensaje">
-        <button v-on:click="mensaje2" class="btn btn-outline-light me-2"> Ver mensaje </button>
-       
+        <div class="container-fluid pb-3">
+            <div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;">
+              <div class="bg-light border rounded-3">
+                <h2>Aplicando lo Aprendido</h2>
+              </div>
+              <div class="bg-light border rounded-3">
+                <label for="" style="color: blue;">{{mensaje}} </label>
+                    <label for="" style="color: red;">Cambiar mensaje</label>
+                    <br>
+                    <input type="text" v-model="mensaje">
+                    <br>
+                    <button v-on:click="mensaje2" class="btn btn-warning"> Ver mensaje </button>
+              </div>
+            </div>
+          </div>
     </div>
-    </div>
-
+    
 </body>
 
 </html>
